kubernetes/catalog/photoprism/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/findthelorax/unraid-templates/main/photoprism.xml
# Category: Productivity, MediaApp-Photos
# Stars: 461 | Downloads: 77254305
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: photoprism
  template:
    metadata:
      labels:
        app.kubernetes.io/name: photoprism
    spec:
      containers:
        - name: photoprism
          image: photoprism/photoprism
          ports:
            - containerPort: 2342
              protocol: TCP
              name: webgui-port
          volumeMounts:
            - name: photoprism-data-0
              mountPath: "/photoprism/storage"
            - name: photoprism-data-1
              mountPath: "/photoprism/originals"
            - name: photoprism-data-2
              mountPath: "/photoprism/import"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
      - name: photoprism-data-0
        persistentVolumeClaim:
          claimName: photoprism-data-0
      - name: photoprism-data-1
        persistentVolumeClaim:
          claimName: photoprism-data-1
      - name: photoprism-data-2
        persistentVolumeClaim:
          claimName: photoprism-data-2
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app.kubernetes.io/name: photoprism
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: photoprism
  ports:
    - port: 2342
      targetPort: 2342
      protocol: TCP
      name: webgui-port
  type: ClusterIP
