kubernetes/catalog/photoprism/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app.kubernetes.io/name: photoprism
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photoprism.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: photoprism
          port: 2342
  tls:
    secretName: int-rlservers-com-tls
